--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@turf/helpers": "^6.1.4",
+    "@turf/turf": "^5.1.6",
+    "@types/turf": "^3.5.32",
     "antd": "^4.5.1",
     "cors": "^2.8.5",
     "jimp": "^0.14.0",
